--- a/app/index.html
+++ b/app/index.html
@@ -11,21 +11,23 @@
   </head>
 
   <body>
-    <button id="start">Start</button>
-    <button id="stop">Stop</button>
+    <h1>WebStreams File Reader</h1>
+    <h2>
+      Read a file from the server and display it here in realtime using Nodejs
+      stream and Web Stream API!
+    </h2>
+
+    <button id="start">Start reading file</button>
+    <button id="stop">Stop read</button>
+    <menu>
+      <a
+        href="https://github.com/EduardoReisUX/GiB-files-reader"
+        target="_blank"
+        >See project on GitHub</a
+      >
+    </menu>
     <div class="container">
-      <main id="cards" class="grid">
-        <article>
-          <div class="text">
-            <h3>Hello item</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi,
-              quae.
-            </p>
-            <a href="#">Here's why</a>
-          </div>
-        </article>
-      </main>
+      <main id="cards" class="grid"></main>
     </div>
   </body>
 </html>
